--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,16282],[],[[4,0,0,[],[1,83,3121],[]],[5,0,0,[],[1,3204,1353],[]],[6,0,0,[],[1,4557,11723],[]]],[],[3,3,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,12933],[],[[4,0,0,[],[1,86,2364],[]],[5,0,0,[],[1,2450,1337],[]],[6,0,0,[],[1,3787,9144],[]]],[],[3,3,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Fileprocess","*/Users/linping/Desktop/Test/Robotframework/AutomationTest/fileprocess.robot","*fileprocess.robot","*Open Browser","*Login Susscess","*Edit Doucument Process"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Fileprocess","*/Users/linping/Desktop/Test/Robotframework/AutomationTest/fileprocess.robot","*fileprocess.robot","*Open Browser","*Login Susscess","*Delete Doucument Process"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:16","fail":0,"id":"s1","label":"Fileprocess","name":"Fileprocess","pass":3,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:13","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:13","fail":0,"id":"s1","label":"Fileprocess","name":"Fileprocess","pass":3,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1704960571442;
+window.output["baseMillis"] = 1704967389416;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 16292;
+window.output["generated"] = 12956;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
