--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,12933],[],[[4,0,0,[],[1,86,2364],[]],[5,0,0,[],[1,2450,1337],[]],[6,0,0,[],[1,3787,9144],[]]],[],[3,3,0,0]];
+window.output["suite"] = [1,2,3,0,[],[1,0,16354],[],[[4,0,0,[],[1,84,2760],[]],[5,0,0,[],[1,2844,5334],[]],[6,0,0,[],[1,8178,8175],[]]],[],[3,3,0,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Fileprocess","*/Users/linping/Desktop/Test/Robotframework/AutomationTest/fileprocess.robot","*fileprocess.robot","*Open Browser","*Login Susscess","*Delete Doucument Process"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Login-Logout","*/Users/linping/Desktop/Test/Robotframework/AutomationTest/login-logout.robot","*login-logout.robot","*Open Browser","*Login Susscess","*Logout User Process"]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:13","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:13","fail":0,"id":"s1","label":"Fileprocess","name":"Fileprocess","pass":3,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:16","fail":0,"id":"s1","label":"Login-Logout","name":"Login-Logout","pass":3,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1704967389416;
+window.output["baseMillis"] = 1704967901959;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 12956;
+window.output["generated"] = 16361;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
