Create Search List Data

--- a/report.html
+++ b/report.html
@@ -1629,22 +1629,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-window.output["suite"] = [1,2,3,0,[],[1,0,16327],[],[[4,0,0,[],[1,111,2305],[]],[5,0,0,[],[1,2417,1349],[]],[6,0,0,[],[1,3767,12558],[]]],[],[3,3,0,0]];
+window.output["suite"] = [1,2,3,0,[],[0,0,5575],[],[[4,0,0,[],[1,86,2888],[]],[5,0,0,[],[1,2974,1362],[]],[6,0,0,[],[0,4336,1239,7],[]]],[],[3,2,1,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Fileprocess","*/Users/linping/Desktop/Test/Robotframework/AutomationTest/fileprocess.robot","*fileprocess.robot","*Open Browser","*Login Susscess","*Edit Doucument Process"]);
+window.output["strings"] = window.output["strings"].concat(["*","*Searchlist","*/Users/linping/Desktop/Test/Robotframework/AutomationTest/searchlist.robot","*searchlist.robot","*Open Browser","*Login Susscess","*Search Data","*Checkbox with locator 'xpath=//div[@class='q-checkbox__bg absolute']' not found."]);
 </script>
 <script type="text/javascript">
-window.output["stats"] = [[{"elapsed":"00:00:16","fail":0,"label":"All Tests","pass":3,"skip":0}],[],[{"elapsed":"00:00:16","fail":0,"id":"s1","label":"Fileprocess","name":"Fileprocess","pass":3,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:05","fail":1,"label":"All Tests","pass":2,"skip":0}],[],[{"elapsed":"00:00:06","fail":1,"id":"s1","label":"Searchlist","name":"Searchlist","pass":2,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1705047834751;
+window.output["baseMillis"] = 1705637798292;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 16340;
+window.output["generated"] = 5578;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
